# 3-python-package-solapis

./: Pipfile  README.md  example.py  pyproject.toml  set_up.py
.github/workflows/: Pipfile  ci.yml  event-logger.yml
src/songsingergenerator/: __main__.py  music.py
test/: test_music.py
