[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "songsingergenerator"
description = "A fun Python package to generate random songs, select random singers, and find singers by name."
version = "0.1.1"
authors = [
  { name = "solapis", email = "your.email@example.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "music", "singers", "generator", "fun"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/software-students-spring2025/3-python-package-solapis/tree/main"
Repository = "https://github.com/software-students-spring2025/3-python-package-solapis.git"

[project.scripts]
songsingergenerator = "songsingergenerator.__main__:main"
